# musical-notes

./: .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pipeline.yml
docs/: 00_music_basic.md  01_tutorial.md  02_contribua.md  02_contribute.md  index.md
docs/stylesheets/: extra.css
docs/templates/: cards.html  instalacao.md
musical_notes/: acordes.py  campo_harmonico.py  chords.py  cli.py  escalas.py  harmonic_field.py  scales.py
tests/: test_acordes.py  test_chords.py  test_cli.py  test_escalas.py  test_scales.py
