[tool.poetry]
name = "musical-notes"
version = "0.1.0"
description = ""
authors = ["guilhermedurbano <guilhermedurbano@gmail.com>"]
readme = "README.md"
packages = [{include = "musical_notes"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
blue = "^0.9.1"
isort = "^5.12.0"
mkdocs-material = "^9.1.0"
mkdocstrings = "^0.20.0"
mkdocstrings-python = "^0.8.3"
taskipy = "^1.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
