[tool.poetry]
name = "musical-notes"
version = "0.1.0"
description = "Notas musicais é um CLI para ajudar na formação de escalas, acordes e campos harmônicos."
license = "BeerWare"
authors = ["guilhermedurbano <guilhermedurbano@gmail.com>"]
readme = "README.md"
packages = [{include = "musical_notes"}]
classifiers = [
    "Topic :: Education",
    "Environment :: Console",
    "Natural Language :: Portuguese (Brazilian)",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.urls]
"Documentation" = "https://musical-notes-docs.readthedocs.io/en/latest/?"
"Repo" = "https://github.com/guidurbano/musical-notes"
"Issues" = "https://github.com/guidurbano/musical-notes/issues"

[tool.poetry.scripts]
musical-notes = "musical_notes.cli:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.7.0"
rich = "^13.3.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.10.3"


[tool.poetry.group.doc.dependencies]
mkdocs-macros-plugin = "^0.7.0"
mkdocs-material = "^9.1.0"
mkdocstrings = "^0.20.0"
mkdocstrings-python = "^0.8.3"
Jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
test = "pytest -s -x --cov=musical_notes -vv"
post_test = "coverage html"
